--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,9 @@
+{{! views/login.hbs }}
+{{!-- This uses the main layout defined in app.js --}}
+{{! If you're using express-handlebars with layout set as "layout" --}}
+{{! This will ensure the layout is applied properly --}}
+
+{{!-- layout: 'layout' will be passed from app.js or the route --}}
 <h2>Login</h2>
 
 <form action="/login" method="POST">
