--- a/views/tenant/dashboard.hbs
+++ b/views/tenant/dashboard.hbs
@@ -50,7 +50,8 @@
             <div class="register-property">
                 <h2>Register a New Property</h2>
                 <p>Click the button below to register a new property.</p>
-                <a href="/property/register" class="btn-register">Register Property</a>
+<a href="/tenant/property-registration" class="btn-register">Register Property</a>
+
             </div>
         </div>
     </div>
