--- a/views/tenant/login.hbs
+++ b/views/tenant/login.hbs
@@ -1,6 +1,13 @@
 <!-- views/tenant/login.hbs -->
+<h3>Tenant Login</h3>
 <form method="POST" action="/tenant/login">
-    <input type="email" name="email" placeholder="Email" required />
-    <input type="password" name="password" placeholder="Password" required />
-    <button type="submit">Login</button>
+    <div class="form-group">
+        <label>Email</label>
+        <input type="email" name="email" placeholder="Email" required class="form-control" />
+    </div>
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password" name="password" placeholder="Password" required class="form-control" />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
