--- a/views/admin/home.hbs
+++ b/views/admin/home.hbs
@@ -1,27 +1,55 @@
-<h2>Admin Dashboard</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>LeaseHub</title>
+  <link rel="icon" href="/images/home-sign.png" type="image/png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/tenantlist" class="btn btn-block btn-outline-primary">Manage Tenants</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/propertylist" class="btn btn-block btn-outline-primary">Manage Properties</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/registrationlist" class="btn btn-block btn-outline-primary">Manage Registrations</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/loanlist" class="btn btn-block btn-outline-primary">Manage Loans</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/testimoniallist" class="btn btn-block btn-outline-primary">Manage Testimonials</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/transactionlist" class="btn btn-block btn-outline-primary">Manage Transactions</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/admin/home/cancellationlist" class="btn btn-block btn-outline-primary">Manage Cancellations</a>
-        </div>
+  <style>
+    .container {
+      padding-left: 50px;
+    }
+    .jumbotron img {
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <div class="navbar-brand">LeaseHub</div>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/admin/home">Home</a></li>
+        <li><a href="/admin/home/about">About</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/admin/login">Log Out</a></li>
+      </ul>
     </div>
-</div>
+  </nav>
+
+  <div class="jumbotron text-center">
+    <img src="/images/properties.png" alt="properties" width="1000" height="250">
+    <h1>Property Management System</h1>
+  </div>
+
+  <div class="container">
+    <a class="btn btn-primary btn-lg" href="/admin/home/tenantlist">Manage Tenants</a>
+    <a class="btn btn-primary btn-lg" href="/admin/home/propertylist">Manage Properties</a>
+    <a class="btn btn-primary btn-lg" href="/admin/home/loanlist">Manage Loans</a>
+    <a class="btn btn-primary btn-lg" href="/admin/home/registrationlist">Registrations</a>
+    <a class="btn btn-primary btn-lg" href="/admin/home/testimoniallist">Testimonials</a>
+    <a class="btn btn-primary btn-lg" href="/admin/home/transactionlist">Transactions</a>
+    <a class="btn btn-primary btn-lg" href="/admin/home/cancellationlist">Cancellations</a>
+  </div>
+</body>
+</html>
