--- a/views/admin/home.hbs
+++ b/views/admin/home.hbs
@@ -38,7 +38,7 @@
   </nav>
 
   <div class="jumbotron text-center">
-    <img src="/images/properties.png" alt="properties" width="1000" height="250">
+    <img src="/properties.png" alt="properties" width="1000" height="250">
     <h1>Property Management System</h1>
   </div>
 
